# travel-mate-server

./: .env.default  .gitattributes  .gitignore  .projectile  Cargo.toml  Dockerfile  README.org  docker-compose.yml
.github/cd/: awsrelease.json
.github/workflows/: pr-build.yml  release.yml
resource/: sampleData.json
src/: main.rs  models.rs  search_airports.rs
