[package]
name = "travel-mate-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
async-fs = "1.5.0"
futures = "0.3.16"
serde = "1.0.127"
serde_json = "1.0.66"
fuzzy-matcher = "*"

