[package]
name = "travel-mate-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
async-fs = "1.5.0"
futures = "0.3.16"
serde = "1.0.127"
serde_json = "1.0.66"
fuzzy-matcher = "*"
env_logger = "0.9.0"
log = "0.4.14"
dotenv = "0.15.0"
actix-cors = "0.5.4"

